kube/loki-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rileyfinal
  name: loki-deployment
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.5
        ports:
        - containerPort: 3100
        volumeMounts:
        - name: loki-pvc
          mountPath: /loki
      volumes:
      - name: loki-pvc
        persistentVolumeClaim:
          claimName: characterbuilder-loki-pvc
