kube/blackbox-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: rileyfinal
  name: blackbox-service
spec:
  type: ClusterIP
  selector:
    app: blackbox
  ports:
    - port: 9115
      targetPort: 9115
