kube/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rileyfinal
  name: characterbuilder-db-deployment
  labels:
    app: characterbuilder-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: characterbuilder-db
  template:
    metadata:
      labels:
        app: characterbuilder-db
    spec:
      containers:
      - name: characterbuilder-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresstorage
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgresstorage
        persistentVolumeClaim:
          claimName: characterbuilder-db-pvc
      - name: init-script
        configMap:
          name: characterbuilder-postgres-init
---
apiVersion: v1
kind: Service
metadata:
  namespace: rileyfinal
  name: characterbuilder-db-service
spec:
  type: ClusterIP
  selector:
    app: characterbuilder-db
  ports:
    - port: 5432
      targetPort: 5432
