kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: rileyfinal
  name: characterbuilder-service
spec:
  type: ClusterIP
  selector:
    app: characterbuilder
  ports:
    - port: 80
      targetPort: 8080
