kube/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rileyfinal
  name: characterbuilderapi-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: swagger.cryptsandcreatures.duckdns.org
    http:
      paths:
      - path: /swagger/index.html
        pathType: Prefix
        backend:
          service:
            name: characterbuilderapi-service
            port:
              number: 80
