kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rileyfinal
  name: characterbuilder-ingress
  annotations: 
    # cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-rileyfinal-production
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production
spec:
  tls:
  - hosts:
    # - cryptsandcreatures.duckdns.org
    # secretName: rileyfinal-kube-tls-production-dd87
    - cryptsandcreatures.alex-kube.duckdns.org
    # secretName:
  ingressClassName: nginx
  rules:
  # - host: cryptsandcreatures.duckdns.org
  - host: cryptsandcreatures.alex-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: characterbuilder-service
            port:
              number: 80
